fix: putting leftnav overflow back to normal It seems one must choose between minimum main area height and proper width determination of the sidenav. Will figure out later.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,7 +38,6 @@ footer {
 main nav {
   position: sticky;
   top: 0;
-  overflow: hidden;
 }
 
 ::ng-deep.boxH3 {
